@@ -1,3 +1,7 @@
+2023-03-20  Matteo Corti  <matteo@corti.li>
+
+        * tmstatus.sh (status): Number of backups today
+
 2023-03-17  Matteo Corti  <matteo@corti.li>
 
         * tmstatus.sh: --today option
